# yoru_robot

./: .gitignore  CLAUDE.md  README.md  connect_pi.sh  deploy_to_pi.sh  download_smoking_model.sh  fastdds_unicast.xml  ros_network.env  setup_pi.sh  start_mapping.sh  start_pi.sh  start_pi_minimal.sh  start_robot.sh  start_server.sh  start_sim.sh  view_camera.sh
archive/dock_scripts/: dock_method1_fixed_dock.py  dock_method2_two_stage_nav2.py  dock_method3_nearest_dock.py  dock_method3_roam_nearest.py
archive/old_maps/: my_room_map.pgm  my_room_map.yaml  my_room_map_serial.data
archive/old_worlds/: room.world
archive/old_worlds/world/: model.sdf
evidence/: .gitignore  README.md  analytics_app.py  annotate_detections.py  capture_sim_evidence.py  evaluate.py  make_report_figures.py  report_style.py  run_evidence.sh
maps/: main_map.pgm  main_map.yaml  main_map_serial.data
src/compliance_bringup/: CMakeLists.txt  package.xml
src/compliance_bringup/config/: compliance_real.yaml  compliance_sim.yaml
src/compliance_bringup/launch/: full_system.launch.py  pi_camera_only.launch.py  pi_hardware.launch.py  real_mapping.launch.py  real_robot.launch.py  server.launch.py  sim.launch.py
src/compliance_bringup/rviz/: compliance.rviz
src/compliance_bringup/worlds/: compliance_world.world  two_room_world.world
src/compliance_core/: package.xml  setup.cfg  setup.py
src/compliance_core/compliance_core/: admin_joy_node.py  audio_warning_node.py  camera_publisher_node.py  compliance_fsm_node.py  coordinate_transform_node.py  dashboard_node.py  dashboard_page.py  event_confirmation_node.py  incident_emailer_node.py  incident_logger_node.py  l298n_driver_node.py  localization_monitor_node.py  location_manager_node.py  nav2_goal_sender_node.py  patrol_node.py  return_to_base_node.py  safety_monitor_node.py  scenario_publisher_node.py  sort_tracker.py  tracking_node.py  yolo_detector_node.py
src/compliance_core/tools/: calibrate_homography.py  generate_audio_wavs.py
src/compliance_core/training/: dataset_template.yaml  evaluate_dataset.py  train_and_evaluate.py  validate_dataset.py
src/dockbot/: CMakeLists.txt  README.md  package.xml
src/dockbot/config/: mapper_params_online_async.yaml  my_controllers.yaml  roomset.rviz
src/dockbot/description/: camera.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
src/dockbot/launch/: joystick.launch.py  launch_robot.launch.py  (+6 more)
(+2 files in other folders)
