<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compliance_bringup</name>
  <version>1.0.0</version>
  <description>Bringup for the CCTV-triggered compliance robot: simulation world
    with CCTV camera, one-command sim launch, real-robot launch, parameters.</description>
  <maintainer email="deshwind02@gmail.com">Deshwin Dharile</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>compliance_core</exec_depend>
  <exec_depend>dockbot</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
